@@ -56,7 +56,7 @@ sub exit {
 # void display_pod(text)
 #
 sub display_pod {
-	my $tmp= POSIX::tmpnam();
+	my $tmp= Psh::OS::tmpnam();
 	my $text= shift;
 
 	open( TMP,">$tmp");
